WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196745
WKScrollView background color does not match WKWebView before content is loaded
https://bugs.webkit.org/show_bug.cgi?id=196745
Summary
WKScrollView background color does not match WKWebView before content is loaded
Timothy Hatcher
Reported
2019-04-09 14:43:48 PDT
[webView setBackgroundColor:[UIColor redColor]] Before loading content, the view will show white instead of the red color the app requested. <
rdar://problem/49750810
>
Attachments
Patch
(1.99 KB, patch)
2019-04-09 14:48 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(2.40 KB, patch)
2019-04-10 10:41 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-04-09 14:48:38 PDT
Comment hidden (obsolete)
Created
attachment 367071
[details]
Patch
Timothy Hatcher
Comment 2
2019-04-10 10:41:59 PDT
Created
attachment 367137
[details]
Patch
WebKit Commit Bot
Comment 3
2019-04-10 11:51:34 PDT
Comment on
attachment 367137
[details]
Patch Clearing flags on attachment: 367137 Committed
r244142
: <
https://trac.webkit.org/changeset/244142
>
WebKit Commit Bot
Comment 4
2019-04-10 11:51:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug