WKScrollView background color does not match WKWebView before content is loaded. https://bugs.webkit.org/show_bug.cgi?id=196745 rdar://problem/49750810

Reviewed by Megan Gardner.

* UIProcess/API/Cocoa/WKWebView.mm:
(scrollViewBackgroundColor): Default to _contentView.backgroundColor on invalid base color.
(-[WKWebView _processDidExit]): Reset to _contentView.backgroundColor.
(-[WKWebView setBackgroundColor:]): Call _updateScrollViewBackground since it can use
_contentView.backgroundColor and it has changed.


Canonical link: https://commits.webkit.org/211060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244142 268f45cc-cd09-0410-ab3c-d52691b4dbfc